SERVER-58358 validate arguments passed to dataSize command